# Algorythmic_Toolbox

./: .gitignore  CMakeLists.txt  README.md
week1_programming_challenges/: CMakeLists.txt  main.cpp
week2_algorithmic_warmup/: 1_fibonachi_number.cpp  2_last_digit_of_fibonachi_number.cpp  3_greatest_common_divisor.cpp  4_least_common_multiple.cpp  5_fibonach_number_again.cpp  6_last_digit_of_the_sum_of_fibonacci_numbers.cpp  7_last_digit_of_the_sum_of_fibonacci_numbers_again.cpp  8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers.cpp  CMakeLists.txt
week3_greedy_algorithms/: 1_money_change.cpp  2_maximum_value_of_the_loot.cpp  3_car_fueling.cpp  4_dot_product.cpp  6_different_summands.cpp  7_largest_number.cpp  CMakeLists.txt
week4_divide_and_conquer/: 0_bynary_search.cpp  1_binary_search.cpp  2_majority_element.cpp  3_sorting.cpp  CMakeLists.txt
