project(Weak1)
#-------------------------------------------------------------------------------
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c*")
#-------------------------------------------------------------------------------
add_executable(MaxPairwiseProduct ${HEADERS} ${SOURCES})
#-------------------------------------------------------------------------------
